# hexapi

./: .gitignore  Makefile  Makefile_schema  Taskfile.yml  init_commands.txt  pyproject.toml
src/: api.py  config.py  fastapi_app.py  handlers.py
src/adapters/: pyd_model.py
src/dbschema/: orm.py
src/domain/: batches.py  events.py  exceptions.py  model.py  services.py
src/domain/base/: entity.py  exceptions.py  model.py  value_object.py
src/domain/order/: entities.py  exceptions.py  services.py  value_objects.py
src/repositories/: repository.py
tests/: conftest.py  test_allocate.py  test_batches.py
tests/integration/: test_api.py  test_handlers.py  test_orm.py  test_repository.py  test_services.py
tests/unit/: test_allocate.py  test_batches.py  test_orm.py  test_repository.py
