[project]
name = "hexapi"
version = "0.1.0"
description = "fastApi project with tdd, ddd and event-driven microservices based on hexagonal arch"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "boto3 (>=1.37,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

pythonpath = [
    "src",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E401"]
exclude = [".venv"]
per-file-ingores = ["__init__.py"]

[tool.black]
line-length = 88